# TP-Cpp

./: CMakeLists.txt
cmake/: compile_options.cmake  std.cmake
src/: game.ixx  game_types.ixx  main.cpp  sprites.ixx
